force-app/main/default/objects/SuperFund__c/SuperFund__c.object-meta.xml
<CustomObject>
    <label>Super Fund</label>
    <nameField>
        <label>SuperFund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>