force-app/main/default/objects/SuperFund__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee pa</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>