force-app/main/default/objects/SuperFund__c/fields/FlagFee__c.field-meta.xml
<CustomField>
    <fullName>FlagFee__c</fullName>
    <label>Flag Fee pa</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>