force-app/main/default/objects/SuperFund__c/fields/GrowthRate__c.field-meta.xml
<CustomField>
    <fullName>GrowthRate__c</fullName>
    <label>Growth Rate pa</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>